--- a/BookStore-main/frontend/package.json
+++ b/BookStore-main/frontend/package.json
@@ -19,12 +19,14 @@
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-use": "^17.5.1",
     "slick-carousel": "^1.8.1",
     "yup": "^1.4.0"
   },
